# borealis-prototypes

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  message.proto
.github/workflows/: rust.yaml
blocksapi/: cursor.proto  message.proto  read_message.proto  services.proto  stream.proto  stream_info.proto  stream_list.proto  write.proto
go/: README.md  message.pb.go  message_vtproto.pb.go
go/blocksapi/: message.pb.go  message_vtproto.pb.go  read_message.pb.go  read_message_vtproto.pb.go  services.pb.go  services_vtproto.pb.go  stream.pb.go  stream_info.pb.go  stream_info_vtproto.pb.go  stream_list.pb.go  stream_list_vtproto.pb.go  stream_vtproto.pb.go
go/common/: common.pb.go  common_vtproto.pb.go
go/payloads/get_account_status/: request.pb.go  request_vtproto.pb.go  response.pb.go  response_vtproto.pb.go
go/payloads/near_block/: header.pb.go  header_vtproto.pb.go  shard.pb.go  shard_vtproto.pb.go  stake.pb.go  stake_vtproto.pb.go
go/payloads/near_block/transaction/: access_key.pb.go  access_key_vtproto.pb.go  execution.pb.go  execution_vtproto.pb.go  receipt.pb.go  receipt_vtproto.pb.go  state_change.pb.go  state_change_vtproto.pb.go  transaction.pb.go  transaction_vtproto.pb.go
go/payloads/near_block/transaction/errors/: actions_validation.pb.go  actions_validation_vtproto.pb.go  compilation.pb.go  compilation_vtproto.pb.go  execution.pb.go  execution_vtproto.pb.go  function_call.pb.go  function_call_vtproto.pb.go  host.pb.go  host_vtproto.pb.go  receipt_validation.pb.go  receipt_validation_vtproto.pb.go
go/payloads/rpc/: message.pb.go  message_vtproto.pb.go
migrate/: Cargo.toml
migrate/src/: app.rs  config.rs  main.rs
payloads/: README.md  message.proto
payloads/near/block/: header.proto  shard.proto  stake.proto
payloads/near/block/transaction/: access_key.proto  execution.proto  receipt.proto  state_change.proto  transaction.proto
payloads/near/block/transaction/errors/: actions_validation.proto  compilation.proto  execution.proto  function_call.proto  host.proto  receipt_validation.proto
payloads/near/common/: common.proto
payloads/near/near_block/transaction/: receipt.proto  state_change.proto
payloads/near/near_block/transaction/errors/: compilation.proto  execution.proto
payloads/payloads/get_account_status/: request.proto  response.proto
payloads/payloads/near_block/transaction/errors/: actions_validation.proto
proto/: common.proto  message.proto
proto/payloads/get_account_status/: response.proto
proto/payloads/near_block/: header.proto  shard.proto  stake.proto
proto/payloads/near_block/transaction/: access_key.proto  execution.proto  receipt.proto  state_change.proto  transaction.proto
proto/payloads/near_block/transaction/errors/: compilation.proto  execution.proto  function_call.proto
proto/payloads/rpc/: request.proto  response.proto
src/: conversions.rs  main.rs
types/: Cargo.toml  README.md  build.rs
types/proto/: common.proto  message.proto
types/proto/blocksapi/: message.proto  read_message.proto  services.proto  stream.proto  stream_info.proto  stream_list.proto
types/proto/common/: common.proto
types/proto/payloads/get_account_status/: request.proto
types/proto/payloads/near_block/: header.proto  shard.proto  stake.proto
types/proto/payloads/near_block/transaction/: access_key.proto  execution.proto  receipt.proto  transaction.proto
types/proto/payloads/near_block/transaction/errors/: actions_validation.proto  compilation.proto  execution.proto  function_call.proto  host.proto  receipt_validation.proto
types/proto/payloads/rpc/: message.proto
types/src/: compression.rs  decoding.rs  decoding_aurora.rs  encoding.rs  lib.rs  proto.rs
types/src/aurora/: builder.rs  decoding.rs  encoding.rs  mod.rs
types/src/borealis/: decoding.rs  encoding.rs  mod.rs  publisher.rs
types/src/proto/: compression.rs  mod.rs  publisher.rs  types.rs
types/tests/: decoding_aurora_and_converting_to_proto_equals_proto.rs  decoding_borealis_and_converting_to_proto_equals_proto.rs  decoding_proto_and_converting_to_aurora_equals_aurora.rs  decoding_proto_and_converting_to_borealis_equals_borealis.rs  published_messages_are_decoded_by_builder.rs
types/tests/common/: aurora.rs  borealis.rs  mod.rs  proto.rs
types/tests/data/: 34834053.0.v3  34834053.v2  34834053.v3  59869714.0.v3  59869714.1.v3  59869714.2.v3  59869714.3.v3  59869714.v2  59869714.v3  82041501.0.v3  82041501.1.v3  82041501.2.v3  82041501.3.v3  82041501.v2  82041501.v3  84797909.0.v3  84797909.1.v3  84797909.2.v3  84797909.3.v3  84797909.v2  84797909.v3  84800642.0.v3  84800642.1.v3  84800642.2.v3  84800642.3.v3  84800642.v2  84800642.v3  88200321.0.v3  88200321.1.v3  88200321.2.v3  88200321.3.v3  88200321.v2  88200321.v3
