[workspace.package]
version = "0.10.9-silo-rc0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "migrate",
    "types",
]

[workspace.dependencies]
async-nats = "0.31"
aurora-refiner-types = { git = "https://github.com/aurora-is-near/borealis-engine-lib.git", tag = "v0.24.0-silo-rc0" }
borealis-rs = { git = "ssh://git@github.com/aurora-is-near/borealis.rs.git", tag = "v0.17.0-silo-rc0" }
bytes = "1"
futures-util = "0.3"
near-crypto = { git = "https://github.com/near/nearcore", tag = "1.36.0-rc.1" }
near-primitives = { git = "https://github.com/near/nearcore", tag = "1.36.0-rc.1" }
prost = "0.12"
# near-vm-errors = { git = "https://github.com/near/nearcore", tag = "1.35.0" }
zstd = "0.12"
zstd-sys = "2"
