[workspace.package]
version = "0.10.8-rc.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "migrate",
    "types",
]

[workspace.dependencies]
async-nats = "0.31"
aurora-refiner-types = { git = "https://github.com/aurora-is-near/borealis-engine-lib.git", branch = "feat/re-export" }
borealis-rs = { git = "ssh://git@github.com/aurora-is-near/borealis.rs.git", branch = "feat/re-export" }
bytes = "1"
futures-util = "0.3"
prost = "0.12"
zstd = "0.12"
zstd-sys = "2"
