[workspace.package]
version = "0.12.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "migrate",
    "types",
]

[workspace.dependencies]
async-nats = "0.31"
aurora-refiner-types = { git = "https://github.com/aurora-is-near/borealis-engine-lib.git", tag = "v0.25.0" }
borealis-rs = { git = "ssh://git@github.com/aurora-is-near/borealis.rs.git", tag = "v0.18.0" }
bytes = "1"
futures-util = "0.3"
prost = "0.12"
zstd = "0.13"
zstd-sys = "2"
