[package]
name = "borealis-proto-migrate"
version = "0.2.0"
edition = "2021"

[dependencies]
aurora-refiner-types = { workspace = true }
borealis-proto-types = { path = "../types" }
borealis-rs = { workspace = true }
anyhow = "1"
async-nats = { version = "0.26" }
borealis-types = { workspace = true }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3"
futures = "0.3"
log = "0.4"
prost = { workspace = true }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = { workspace = true }
zstd-sys = { workspace = true }
