[package]
name = "borealis-proto-migrate"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = { workspace = true }
aurora-refiner-types = { workspace = true }
borealis-proto-types = { path = "../types", features = ["async-nats-publish"] }
borealis-rs = { workspace = true }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
futures-util = { workspace = true }
log = "0.4"
prost = { workspace = true }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = { workspace = true }
zstd-sys = { workspace = true }
